# fraim-action

./: .gitignore  README.md  action.yml  create-pr-suggestions.sh  example-workflow.yml  fraim-scan.sh  marketplace-metadata.md  pyproject.toml
src/: fraim.py  github_utils.py  sarif_to_comment.py  workflows.py
