[project]
name = "fraim-action"
version = "1.0.0"
description = "Fraim Security GitHub Action Python scripts"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Fraim Team"}]

requires-python = ">=3.12"

dependencies = [
    "PyGithub>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = []
